# gazzeton

./: .gitignore  README.md  feeds.example.yaml  pyproject.toml
src/gazzeton/: __main__.py  cli.py  config.py  discover.py  fetcher.py  formatter.py
